Revised PCW for class 1.1

--- a/PCW 1.1/mnist_data.ipynb
+++ b/PCW 1.1/mnist_data.ipynb
@@ -225,6 +225,12 @@
     }
    ],
    "source": [
+    "# Here, we load the MNIST dataset brought from https://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits\n",
+    "# This dataset represents images of handwritten digits. Each datapoint is 8x8 pixel image of the digit.\n",
+    "# Each column in the dataframe represent the value of a particular pixel in the image. The value of each\n",
+    "# pixel is the lightness of the pixel. So the bigger is the value, the closer the pixel is to the white color.\n",
+    "# There is also a column with the label of the digit (its value).\n",
+    "\n",
     "digits = datasets.load_digits(as_frame=True)\n",
     "df = digits.frame\n",
     "df['target'] = [digits.target_names[digit_type] for digit_type in df['target']]\n",
@@ -444,6 +450,8 @@
     }
    ],
    "source": [
+    "# After loading, we need to clean the dataset. Here, we just want to learn how to distinguish between\n",
+    "# 3 and 8, so we do not need all the other digits. Thus, we exclude them.\n",
     "clean_df = df[(df['target'] == 3) | (df['target'] == 8)].reset_index(drop=True)\n",
     "clean_df.head(5)"
    ]
@@ -499,6 +507,9 @@
     }
    ],
    "source": [
+    "# After loading and cleaning, we can visualize the dataset. To do so, we go through\n",
+    "# 8 first datapoints for each of the unique digit (3 and 8) in our case and plot them as subplots.\n",
+    "\n",
     "for digit in clean_df['target'].unique():\n",
     "    print(f'Showing images for digit {digit}:')\n",
     "    data = clean_df[clean_df['target'] == digit].reset_index(drop=True)\n",
